--- a/src/css/login-register.css
+++ b/src/css/login-register.css
@@ -8,6 +8,34 @@ body,
 html {
   height: 100%;
 }
+#transparent {
+  /* background-color: rgb(255, 255, 255, 0.3); */
+  background-color: "red";
+  width: "30vw";
+  height: "70vh";
+}
+#recomendations {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  color: "#FFF";
+  flex-direction: column;
+  background-color: #000;
+  position: relative;
+  overflow-y: scroll;
+  /* border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px; */
+}
+#recomendations:before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.1;
+  background-image: url(../auth/assets/bg-chat.jpeg);
+  background-size: 300px;
+  z-index: 0;
+}
 
 /*---------------------------------------------*/
 a {
@@ -119,8 +147,9 @@ iframe {
 [ Utility ]*/
 .txt1 {
   font-size: 16px;
-  color: #827ffe;
+  color: #000;
   line-height: 1.4;
+  margin-right: 15px;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -164,12 +193,12 @@ iframe {
 }
 
 .login100-form-title {
-  font-size: 30px;
-  color: #403866;
+  font-size: 20px;
+  color: #000;
   line-height: 1.2;
   text-transform: uppercase;
   text-align: center;
-
+  margin-top: 10px;
   width: 100%;
   display: block;
 }
@@ -190,11 +219,10 @@ iframe {
   color: #403866;
   line-height: 1.2;
   font-size: 18px;
-
   display: block;
   width: 100%;
-  background: transparent;
-  height: 62px;
+  background: rgba(255, 255, 255, 0.5);
+  height: 60px;
   padding: 0 20px 0 38px;
 }
 /*------------------------------------------------------------------
@@ -259,7 +287,7 @@ iframe {
   font-size: 16px;
   color: #999999;
   line-height: 1.2;
-
+  margin-left: 15px;
   display: block;
   position: relative;
   padding-left: 26px;
@@ -326,7 +354,7 @@ iframe {
   padding: 0 20px;
   width: 100%;
   height: 62px;
-  background-color: #827ffe;
+  background-color: #000;
   border-radius: 3px;
 
   -webkit-transition: all 0.4s;
